--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.11.16"
+    "mongoose": "^5.11.16",
+    "uuid": "^8.3.2"
   }
 }
