--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.11.16",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "dateformat": "^4.5.1"
   }
 }
