--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
@@ -10,6 +12,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "dateformat": "^4.5.1"
+    "dateformat": "^4.5.1",
+    "isomorphic-fetch": "^3.0.0"
   }
 }
