--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.4.1",
+    "dateformat": "^4.5.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "isomorphic-fetch": "^3.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.16",
-    "uuid": "^8.3.2",
-    "dateformat": "^4.5.1",
-    "isomorphic-fetch": "^3.0.0"
+    "uuid": "^8.3.2"
   }
 }
